more z-index fixes
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@28740 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/skins/oasis/css/core/_GlobalHeader.scss
+++ b/skins/oasis/css/core/_GlobalHeader.scss
@@ -134,7 +134,7 @@
 		position: absolute;
 		top: -9999px;
 		width: $width-outside - 20px;
-		z-index: 2000000000; //close to the highest possible z-index value
+		z-index: $zTop;
 		&.show {
 			display: block;
 			top: 44px;
