--- a/skins/oasis/css/core/_article.scss
+++ b/skins/oasis/css/core/_article.scss
@@ -3,7 +3,6 @@
 	padding: 0 10px;
 	position: relative;
 	min-height: 250px;
-	z-index: 1;
 	h1, h2, h3, h4, h5, h6 {
 		margin: .5em 0 .2em;
 	}
